--- a/style/style.scss
+++ b/style/style.scss
@@ -1,2 +1,42 @@
 @import '../bower_components/bourbon/app/assets/stylesheets/_bourbon.scss';
 @import '../bower_components/neat/app/assets/stylesheets/_neat.scss';
+
+main{
+  @include outer-container(50%);
+
+
+  nav{
+    background:#AADBF5;
+    @include span-columns(12);
+    margin:0;
+
+    li{
+      @include span-columns(6);
+      list-style: none;
+      display:inline-block;
+      text-align: center;
+      position:relative;
+      right:1em;
+      bottom:0.4em;
+      color:white;
+    }
+  }
+  h1{
+    @include span-columns(12);
+    text-align: center;
+  }
+  h3{
+    @include span-columns(12);
+    margin-bottom:0;
+  }
+  input{
+    @include span-columns(12);
+    height:2em;
+  }
+  button{
+    @include span-columns(4);
+    @include shift(3.5);
+    font-size:1.2em;
+    margin-top:5%;
+  }
+}
